--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://builtwithbootstrap.com/" target="_blank">Built With Bootstrap</a></li>
-            <li><a href="https://wrapbootstrap.com/?ref=bsw" target="_blank">WrapBootstrap</a></li>
+            <li><a href="/services" target="_blank">Services</a></li>
+            <li><a href="/about" target="_blank">About</a></li>
+            <li><a href="/contactus" target="_blank">Contact Us</a></li>
           </ul>
 
         </div>
