--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/services" target="_blank">Services</a></li>
-            <li><a href="/about" target="_blank">About</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="/contactus" target="_blank">Contact Us</a></li>
           </ul>
 
