--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="/" class="navbar-brand"><img href="/revolutionlogo.png">Revolution Dental</a>
+          <a href="../" class="navbar-brand"><img src="/revolutionlogo.png"></a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
